[gd_scene load_steps=4 format=3 uid="uid://duleeslcm6io5"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_xjlkq"]
[ext_resource type="FontFile" uid="uid://bwjpn3acva7by" path="res://assets/fonts/half_bold_pixel-7.ttf" id="2_rf4g2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4tyfi"]
size = Vector2(660, 440)

[node name="Menu" type="Node2D"]
position = Vector2(317, 285)
script = ExtResource("1_xjlkq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.012483, 0, 0.615353, 1)
texture = SubResource("PlaceholderTexture2D_4tyfi")

[node name="Label" type="Label" parent="."]
offset_left = -89.0
offset_top = -66.0
offset_right = 73.0
offset_bottom = -17.0
theme_override_fonts/font = ExtResource("2_rf4g2")
text = "CONTEMPLEM O MAGO
THE GAME"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.984314)
z_index = 4
offset_left = -54.0
offset_top = 25.0
offset_right = 58.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_rf4g2")
text = "START GAME"
metadata/_edit_use_anchors_ = true

[node name="ConfigButton" type="Button" parent="."]
offset_left = -39.0
offset_top = 69.0
offset_right = 37.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("2_rf4g2")
text = "CONFIG"
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="."]
offset_left = -44.0
offset_top = 107.0
offset_right = 43.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("2_rf4g2")
text = "CREDITS"
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="."]
offset_left = -22.0
offset_top = 156.0
offset_right = 31.0
offset_bottom = 187.0
theme_override_fonts/font = ExtResource("2_rf4g2")
text = "EXIT"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
